# rust-qmlglsink-example

./: Cargo.toml  build.rs
src/: main.qml  main.rs
