[package]
name = "qmetaobject-gstreamer_example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cpp_build = "*"
pkg-config = "*"

[dependencies]
qmetaobject = "*"
gst = { package = "gstreamer", version = "*" }
cpp = "*"
cstr = "*"
