[package]
name = "qmetaobject-gstreamer_example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cpp_build = "0.5"
pkg-config = "0.3"

[dependencies]
qmetaobject = "0.2"
gst = { package = "gstreamer", version = "0.18" }
cpp = "0.5"
cstr = "0.2"
